--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Modern Blog
-description: Modern-Blog A Elegant template for Jekyll
-keywords: Modern, Blogging, Fun
-author: Wferr
+title: Marta Toomer Illustration
+description: Illustration and painting
+keywords: illustration, painting, animal portraits
+author: Marta
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://www.martatoomer.co.uk" # the base hostname & protocol for your site
