--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Marta Toomer Illustration
-description: Illustration and painting
+title: Marta Toomer Animal Illustration
+description: Illustration, drawing and  paintings
 keywords: illustration, painting, animal portraits
 author: Marta
 baseurl: "" # the subpath of your site, e.g. /blog/
